--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ src/__pycache__
 src/__pycache__/*.pyc
 src/runs/tmodel
 src/*.json
+src2/__pycache__ 
+src2/gpt2
+src2/sms_spam_collection
+src2/sms_spam_collection.zip
+src2/*.csv
